--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha2'
+
 }
